[tool.poetry]
name = "pr-rating-action"
version = "1.0.2"
description = ""
authors = ["mhh <mike.hukiewitz@robotter.ai>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
